--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "history": "^5.3.0",
         "html-react-parser": "^3.0.15",
         "i18next": "^22.4.13",
+        "jspdf": "^3.0.4",
         "lodash": "^4.17.21",
         "mapbox-gl": "^2.15.0",
         "miragejs": "^0.1.47",
